# serializer

./: CMakeLists.txt  endian.cpp  main.cpp  serialIn.cpp  serialOut.cpp  serializer.cpp  special.cpp  times.cpp
include/: containers.hpp  deserialLimits.hpp  endian.hpp  serialIn.hpp  serialOut.hpp  serializer.hpp  special.hpp  times.hpp
